Cleaned some things up, and added better comments. FDUtil Still passes all tests!